# MCP_Server_FastMCP

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.md
docs/getting-started/: environment-setup.md  project-structure.md  what-is-mcp.md
docs/reference/: claude-integration.md  fastmcp-api.md
docs/tutorials/: 01-hello-mcp.md  02-weather-server.md  03-file-manager.md  04-database-server.md  05-memo-app.md
tutorials/01_hello_mcp/: server.py
tutorials/02_weather_server/: server.py
tutorials/03_file_manager/: server.py
tutorials/04_database_server/: server.py
tutorials/05_memo_app/: server.py
