[project]
name = "mcp-server-tutorials"
version = "1.0.0"
description = "FastMCP를 사용한 MCP 서버 튜토리얼 모음"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Tutorial 04: MSSQL 데이터베이스 연동
database = [
    "sqlalchemy>=2.0.0",
    "pyodbc>=5.0.0",
]
# Tutorial 05: SQLite 메모앱 (sqlite3는 표준 라이브러리)
memo = [
    "aiosqlite>=0.20.0",
]
# 전체 설치
all = [
    "sqlalchemy>=2.0.0",
    "pyodbc>=5.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
